--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,8 @@
 # User defined files and folders
 old_files/
-plots/*
-resources/*
-!resources/labelling/
-resources/labelling/sampled_audio/
-!resources/mod_data/
-resources/mod_data/*
-!resources/models/
-resources/models/*
-
-
+plots/
+resources/
+manuscript/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
